# fandango

./: .excluded  .gitignore  .gitlab-ci-alba.yml  AUTHORS  LICENSE  MANIFEST.in  PKG-INFO  README  README.md  README.rst  arrays.py  callbacks.py  db.py  device.py  dicts.py  interface.py  linos.py  log.py  objects.py  servers.py  setup.py
ci/test/: test_fandango.py  test_functional.py  test_objects.py  test_tango.py
conda/: meta.yaml
debian/: changelog  control  copyright  help2man  lintian-overrides.txt  manpages  old_changelog  python-fandango.lintian-overrides  rules  watch
doc/: classes.rst  conf.py  description.rst  index.rst  recipes.rst  update.py  whatsnew.rst
doc/branch/: new-cached-proxy.rst
doc/devices/: CopyCatDS.rst  Dev4Tango.rst  FolderDS.rst  SaverDS.rst
doc/recipes/: CarelessExpressions.rst  CheckDevices.rst  ConfigureTangoEvents.rst  CreateDevices.rst  CreateNewTangoHost.rst  DynamicDS_and_Simulators.rst  DynamicDevicesAndSimulators.rst  DynamicRecipes.rst  EventListeners.rst  EventSourceAndCallbacks.rst  EventSources.rst  EventsAndCallbacks.rst  Exceptions.rst  ExportDeviceData.rst  Functional.rst  TangoEval_and_getTangoValue  TangoEval_and_getTangoValue.rst  TangoRecipes.rst  Threading.rst  fandango_shell.rst  script_ctds.rst
doc/reports/: New_In_Fandango_12.rst
doc/sandbox/: sandbox.rst
fandango/: CHANGELOG  CHANGES  README  VERSION  __init__.py  arrays.py  callbacks.py  db.py  debug.py  device.py  devslist.py  dicts.py  doc.py  dynamic.py  excepts.py  functional.py  linos.py  log.py  objects.py  qt.py  servers.py  tango.py  threads.py  web.py
fandango.egg-info/: SOURCES.txt  top_level.txt
fandango/device/: DDebug.py  Dev4Tango.py  DynamicDS.py  FolderDS.py  FolderGUI.py  SaverDS.py  WARNING  WorkerDS.py  __init__.py
fandango/interface/: CopyCatDS.py  __init__.py  inheritance.py
fandango/scripts/: CopyCatDS  DynamicDS  FolderDS  __init__.py  csv2tango  csv2tango.py  ctds  devicemonitor  fandango  fandango-qt  fandango-sh  fandango.qt  fandango_script.py  folder-gui  folder-gui.py  generate-sphinx-docs.sh  sardanact  sardanact.py  setup.ds.py  tango2csv  tango2csv.py  tango2json  tango2json.py  tango_cleanup  tango_create_device.py  tango_create_starter.py  tango_host  tango_host.py  tango_monitor  tango_monitor.py  tango_property  tango_property.py  tango_servers  tango_servers.py  tango_starter  tango_starter.py  testpy
interface/: CopyCatDS.py
share/yat4tango/tags/release_1_4_0/include/: Makefile.am
share/yat4tango/tags/release_1_4_0/include/yat4tango/: DeviceTask.h  DeviceTask.i  DynamicAttr.h  DynamicAttr.tpp  MonitoredAttribute.h  MonitoredDevice.h  PlugInHelper.h
share/yat4tango/tags/release_1_4_1/src/: DynamicAttr.cpp  Makefile.am
share/yat4tango/tags/release_1_4_4/src/: ExceptionHelper.cpp  Makefile.am
share/yat4tango/tags/release_1_4_7/src/: Makefile.am  Makefile.macosx  MonitoredDevice.cpp  PlugInAttr.cpp
share/yat4tango/tags/release_1_4_8/include/: Makefile.am
share/yat4tango/tags/release_1_4_8/include/yat4tango/: DeviceTask.h  DeviceTask.i  DynamicAttrHelper.h  PlugInHelper.i
(+1464 files in other folders)
