nobase_include_HEADERS =  \
	yat4tango/CommonHeader.h \
	yat4tango/DeviceTask.h \
	yat4tango/DeviceTask.i \
	yat4tango/DynamicAttr.h \
	yat4tango/DynamicAttr.tpp \
	yat4tango/DynamicAttrHelper.h \
	yat4tango/DynamicAttrHelper.i \
	yat4tango/ExceptionHelper.h \
	yat4tango/LogHelper.h \
	yat4tango/PluginAttr.h \
	yat4tango/PluginAttr.i \
	yat4tango/PluginAttr.tpp \
	yat4tango/ThreadSafeDeviceProxy \
	yat4tango/MonitoredAttribute.h \
	yat4tango/MonitoredDevice.h \
	yat4tango/MonitoredDeviceTask.h





