nobase_include_HEADERS =  \
	yat4tango/CommonHeader.h \
	yat4tango/DeviceTask.h \
	yat4tango/DeviceTask.i \
	yat4tango/DynamicAttr.h \
	yat4tango/DynamicAttr.tpp \
	yat4tango/DynamicAttrHelper.h \
	yat4tango/DynamicAttrHelper.i \
	yat4tango/Export.h \
	yat4tango/ExceptionHelper.h \
	yat4tango/LogHelper.h \
	yat4tango/PlugInAttr.h \
	yat4tango/PlugInAttr.i \
	yat4tango/PlugInAttr.tpp \
	yat4tango/PlugInHelper.h \
	yat4tango/PlugInHelper.i \
	yat4tango/ThreadSafeDeviceProxy.h \
	yat4tango/ThreadSafeDeviceProxy.i \
	yat4tango/MonitoredAttribute.h \
	yat4tango/MonitoredDevice.h \
	yat4tango/MonitoredDeviceTask.h





